feat : add container, h1, p

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 		</title>
 	</head>
 
+	<body>
+		<div class="container">
+	<h1>
+		git flow practice
+	</h1>
+	<p>
+	do my best
+	</p>
+	</div>
+	</body>
 
 
 </html>
