--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>
 	git flow practice
 		</title>
+		
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	</head>
 
 	<body>
